# elan-fingerprint-driver

./: .Module.symvers.cmd  .fingerprint.ko.cmd  .fingerprint.mod.cmd  .fingerprint.mod.o.cmd  .fingerprint.o.cmd  .fingerprint_usb_request.mod.cmd  .fingerprint_usb_request.o.cmd  .modules.order.cmd  CMakeLists.txt  Makefile  fingerprint.c  fingerprint.h  fingerprint.ko  fingerprint.mod  fingerprint.mod.c  fingerprint_usb_request.c  fingerprint_usb_request.h  fingerprint_usb_request.mod  modules.order  test  test.c
